# knowledge

./: .gitignore  Cargo.toml  Makefile  README.md  shell.nix
front/: elm.json
front/public/: elm.js  index.html
front/src/: Api.elm  Article.elm  Main.elm  Search.elm
front/tests/: SearchTest.elm
src/: api.rs  conf.rs  domain.rs  file_handler.rs  file_watcher.rs  main.rs  metadata_extractor.rs  metadata_handler.rs  storage.rs  tree_traverser.rs  uc.rs  walker.rs
src/api/: api.rs  front.rs  server.rs
src/domain/: tree.rs
src/uc/: graph.rs
src/walker/: local.rs
