[package]
name = "knowledge"
version = "0.0.4"
authors = ["Brest Computer Club <brest-computer-club@protonmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
actix-web = "3" # web framework
async-std = { version = "1.7.0", features = ["unstable", "attributes"] }

# front
rust-embed="3.0.0" # load front assets in binary
webbrowser = "0.5.5" # open the default browser

#back
yaml-rust = "0.4.4" # header parsing
dashmap = "3.11.10" # storage
lazy_static = "1.4.0" # storage ref
serde = { version = "1.0", features = ["derive"] } # json response
base64 = "0.13.0" # submitted article paths
rand = "0.7.3" # to pick a random port at startup
notify = "4.0.12" # to watch file changes
actix-cors = "0.5.1" # for frontend dev env
log = "0.4.11" # logger interface
simple_logger = "1.11.0" # logger implementation
path_abs = "0.5.0" # to clean the paths even if they don't exist (cf canonicalize)


[dev_dependencies]
tempfile = "3" # to generate tests

